# harness

./: .gitignore  Makefile  pyproject.toml
.github/: ralph.sh
.github/prompts/: parallel_merge.md  parellel_work.md  work.md
.github/skills/ralph/: SKILL.md
.github/skills/repo-review/: SKILL.md
docs/: harness_stories.md
src/harness/: __init__.py  config.py
src/harness/cli/: __init__.py  _utils.py
src/harness/cli/commands/: init.py  plan.py  run.py  status.py
src/harness/core/: __init__.py  archive.py  branch.py  claim.py  orchestrator.py  output.py  progress.py  scheduler.py  verify.py  worktree.py
src/harness/core/models/: __init__.py  output.py  prd.py  progress.py  verify.py
src/harness/execution/: __init__.py  base.py  container.py  local.py  models.py
src/harness/mcp/: __init__.py
src/harness/memory/: __init__.py  index.py  models.py
src/harness/profiles/: __init__.py  base.py
src/harness/prompt/: __init__.py
src/harness/workflows/: __init__.py
tasks/: prd-agent-harness.json  prd-agent-harness.md  tui-waves.md
tests/: test_config.py
tests/cli/commands/: test_init.py
tests/core/: test_branch_archive.py  test_claim.py  test_progress.py  test_worktree.py
tests/core/models/: test_output.py  test_prd.py  test_progress.py
tests/execution/: test_execution.py
tests/profiles/: test_base.py
